--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </nav>
     </div>
     <section>
-      <div id="hero">
+      <div id="hero" >
         <div class="izq">
          <div class="bandeja">
           <h1>Mode und Sport in Fiesch</h1>
@@ -48,8 +48,20 @@
             Frauen, im Winter- oder Sommersport
           </p>
           <p><span>Die besten Marken zum</span></p>
-          <div class="logos">aqui los logos</div>
-          <a href="#" class="btn">siehe mode</a>
+          <div class="logos">
+            <li><img src="assets/marcas/marccaion_collection_sports.png" alt="marccaion_collection_sports"></li>
+            <li><img src="assets/marcas/cambio.png" alt="cambio"></li>
+            <li><img src="assets/marcas/paul_shark.png" alt="paul shark"></li>
+            <li><img src="assets/marcas/gant.png" alt="gant"></li>
+            <li><img src="assets/marcas/martini.png" alt="martini"></li>
+            <li><img src="assets/marcas/Hoka.png" alt="hoka"></li>
+
+
+          </div>
+          <a href="#" class="btn">
+          <img src="assets/der-doble.svg" alt="arrow volken">
+            siehe mode
+          </a>
          </div>
         </div>
         <div class="der">
