--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
 
         <!-- submenu -->
-        <ul id="submenu">
+        <ul id="submenu" class="">
           <li><a href="#">Winterbekleidung</a></li>
           <li><a href="#">Langlaufbekleidung</a></li>
           <li><a href="#">Kinderbekleidung</a></li>
