--- a/index.html
+++ b/index.html
@@ -39,37 +39,71 @@
       </nav>
     </div>
     <section>
-      <div id="hero" >
+      <div id="hero">
         <div class="izq">
-         <div class="bandeja">
-          <h1>Mode und Sport in Fiesch</h1>
-          <p>
-            Finden Sie eine große Auswahl an Bekleidungsmarken für Männer und
-            Frauen, im Winter- oder Sommersport
-          </p>
-          <p><span>Die besten Marken zum</span></p>
-          <div class="logos">
-            <li><img src="assets/marcas/marccaion_collection_sports.png" alt="marccaion_collection_sports"></li>
-            <li><img src="assets/marcas/cambio.png" alt="cambio"></li>
-            <li><img src="assets/marcas/paul_shark.png" alt="paul shark"></li>
-            <li><img src="assets/marcas/gant.png" alt="gant"></li>
-            <li><img src="assets/marcas/martini.png" alt="martini"></li>
-            <li><img src="assets/marcas/Hoka.png" alt="hoka"></li>
-
-
+          <div class="bandeja">
+            <h1>Mode und Sport in Fiesch</h1>
+            <p>
+              Finden Sie eine große Auswahl an Bekleidungsmarken für Männer und
+              Frauen, im Winter- oder Sommersport
+            </p>
+            <p><span>Die besten Marken zum</span></p>
+            <div class="logos">
+              <li>
+                <img
+                  src="assets/marcas/marccaion_collection_sports.png"
+                  alt="marccaion_collection_sports"
+                />
+              </li>
+              <li><img src="assets/marcas/cambio.png" alt="cambio" /></li>
+              <li>
+                <img src="assets/marcas/paul_shark.png" alt="paul shark" />
+              </li>
+              <li><img src="assets/marcas/gant.png" alt="gant" /></li>
+              <li><img src="assets/marcas/martini.png" alt="martini" /></li>
+              <li><img src="assets/marcas/Hoka.png" alt="hoka" /></li>
+            </div>
+            <a href="#" class="btn">
+              <img src="assets/der-doble.svg" alt="arrow volken" />
+              siehe mode
+            </a>
           </div>
-          <a href="#" class="btn">
-          <img src="assets/der-doble.svg" alt="arrow volken">
-            siehe mode
-          </a>
-         </div>
         </div>
         <div class="der">
-          <img src="assets/hero-volken-sport-mode-a.png" alt="volken sport mode summer">
-          <img src="assets/hero-volken-sport-mode-b.png" alt="volken sport mode in Fiesch">
-          <img src="assets/hero-volken-sport-mode-c.png" alt="volken sport mode Winterbekleidung">
+          <img
+            src="assets/hero-volken-sport-mode-a.png"
+            alt="volken sport mode summer"
+          />
+          <img
+            src="assets/hero-volken-sport-mode-b.png"
+            alt="volken sport mode in Fiesch"
+          />
+          <img
+            src="assets/hero-volken-sport-mode-c.png"
+            alt="volken sport mode Winterbekleidung"
+          />
         </div>
       </div>
+    </section>
+    <section class="contenedordoble conte">
+      <div class="izq">
+        <img src="assets/volken-store-fiesch.png" alt="volken store fiesch" />
+      </div>
+      <div class="der">
+        <div class="bandeja">
+          <h2>Volken Store</h2>
+          <p>
+            Volken Sport Mode bietet alles, was Sie für Ihre Outdoor-Abenteuer
+            brauchen, darunter Damen- und Herrenbekleidung, Schuhe, Accessoires
+            und Ausrüstung, wir sind ein <b>Traditionsgeschäft in Fiesch</b>
+          </p>
+          <a href="#" class="btn">Geschichte</a>
+        </div>
+      </div>
+    </section>
+    <section class="conte section-header">
+      <h2>Vorgestellte Kleidung</h2>
+      <p>Auswahl an vorgestellter Kleidung oder Accessoires aus unserem Shop</p>
     </section>
   </body>
   <script type="module" src="js/app.js"></script>
