--- a/index.html
+++ b/index.html
@@ -105,6 +105,62 @@
       <h2>Vorgestellte Kleidung</h2>
       <p>Auswahl an vorgestellter Kleidung oder Accessoires aus unserem Shop</p>
     </section>
+    <section class="conte" id="productos">
+      <div class="card-main">
+        <div class="conte-img">
+          <img src="assets/producto-1.png" alt="producto a">
+          <div class="logo">
+            <img src="assets/marcas/peakperformance.png" alt="peak peak performance">
+          </div>
+        </div>
+        <h3>
+          Product title here
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac eget neque ac in. 
+        </p>
+        <a href="#" class="btnFlecha">
+          <img src="assets/der-doble.svg" alt="flecha">
+          Damen</a>
+      </div>
+
+      <div class="card-main">
+        <div class="conte-img">
+          <img src="assets/producto-1.png" alt="producto a">
+          <div class="logo">
+            <img src="assets/marcas/peakperformance.png" alt="peak peak performance">
+          </div>
+        </div>
+        <h3>
+          Product title here
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac eget neque ac in. 
+        </p>
+        <a href="#" class="btnFlecha">
+          <img src="assets/der-doble.svg" alt="flecha">
+          Damen</a>
+      </div>
+
+      <div class="card-main">
+        <div class="conte-img">
+          <img src="assets/producto-1.png" alt="producto a">
+          <div class="logo">
+            <img src="assets/marcas/peakperformance.png" alt="peak peak performance">
+          </div>
+        </div>
+        <h3>
+          Product title here
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac eget neque ac in. 
+        </p>
+        <a href="#" class="btnFlecha">
+          <img src="assets/der-doble.svg" alt="flecha">
+          Damen</a>
+      </div>
+      
+    </section>
   </body>
   <script type="module" src="js/app.js"></script>
 </html>
