--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 
       <div class="card-main">
         <div class="conte-img">
-          <img src="assets/producto-1.png" alt="producto a">
+          <img src="assets/producto-2.png" alt="producto a">
           <div class="logo">
-            <img src="assets/marcas/peakperformance.png" alt="peak peak performance">
+            <img src="assets/marcas/buff.png" alt="peak peak performance">
           </div>
         </div>
         <h3>
@@ -144,9 +144,9 @@
 
       <div class="card-main">
         <div class="conte-img">
-          <img src="assets/producto-1.png" alt="producto a">
+          <img src="assets/producto-3.png" alt="producto a">
           <div class="logo">
-            <img src="assets/marcas/peakperformance.png" alt="peak peak performance">
+            <img src="assets/marcas/benvenuto.png" alt="peak peak performance">
           </div>
         </div>
         <h3>
