--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Volken Sport Fiesch</title>
     <link rel="stylesheet" href="style.scss" />
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+  />    
   </head>
   <body>
     <div class="conte">
@@ -108,61 +112,169 @@
     <section class="conte" id="productos">
       <div class="card-main">
         <div class="conte-img">
-          <img src="assets/producto-1.png" alt="producto a">
+          <img src="assets/producto-1.png" alt="producto a" />
           <div class="logo">
-            <img src="assets/marcas/peakperformance.png" alt="peak peak performance">
+            <img
+              src="assets/marcas/peakperformance.png"
+              alt="peak peak performance"
+            />
           </div>
         </div>
-        <h3>
-          Product title here
-        </h3>
+        <h3>Product title here</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac eget neque ac in. 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac
+          eget neque ac in.
         </p>
         <a href="#" class="btnFlecha">
-          <img src="assets/der-doble.svg" alt="flecha">
-          Damen</a>
+          <img src="assets/der-doble.svg" alt="flecha" />
+          Damen</a
+        >
       </div>
 
       <div class="card-main">
         <div class="conte-img">
-          <img src="assets/producto-2.png" alt="producto a">
+          <img src="assets/producto-2.png" alt="producto a" />
           <div class="logo">
-            <img src="assets/marcas/buff.png" alt="peak peak performance">
+            <img src="assets/marcas/buff.png" alt="peak peak performance" />
           </div>
         </div>
-        <h3>
-          Product title here
-        </h3>
+        <h3>Product title here</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac eget neque ac in. 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac
+          eget neque ac in.
         </p>
         <a href="#" class="btnFlecha">
-          <img src="assets/der-doble.svg" alt="flecha">
-          Damen</a>
+          <img src="assets/der-doble.svg" alt="flecha" />
+          Damen</a
+        >
       </div>
 
       <div class="card-main">
         <div class="conte-img">
-          <img src="assets/producto-3.png" alt="producto a">
+          <img src="assets/producto-3.png" alt="producto a" />
           <div class="logo">
-            <img src="assets/marcas/benvenuto.png" alt="peak peak performance">
+            <img
+              src="assets/marcas/benvenuto.png"
+              alt="peak peak performance"
+            />
           </div>
         </div>
-        <h3>
-          Product title here
-        </h3>
+        <h3>Product title here</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac eget neque ac in. 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac
+          eget neque ac in.
         </p>
         <a href="#" class="btnFlecha">
-          <img src="assets/der-doble.svg" alt="flecha">
-          Damen</a>
+          <img src="assets/der-doble.svg" alt="flecha" />
+          Damen</a
+        >
+      </div>
+    </section>
+
+    <div id="sport" class="conte">
+      <div class="cuadroIntro">
+        <div class="bandeja">
+          <h2>Sport</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat
+            hac eget neque ac in.
+          </p>
+        </div>
+      </div>
+      <div class="cuadro">
+        <div class="bandeja">
+          <h2>Langlaufbekleidung</h2>
+          <a href="#" class="btnFlechaVacio"
+            ><img src="assets/der-doble.svg" alt="volken arrow button"
+          /></a>
+        </div>
+        <img
+          src="assets/sport-Langlaufbekleidung.png"
+          class="cover"
+          alt="Volken sport Langlaufbekleidung"
+        />
+      </div>
+      <div class="cuadro">
+        <div class="bandeja">
+          <h2>Winterbekleidung</h2>
+          <a href="#" class="btnFlechaVacio"
+            ><img src="assets/der-doble.svg" alt="volken arrow button"
+          /></a>
+        </div>
+        <img
+          src="assets/sport-winter.png"
+          class="cover"
+          alt="Volken sport Winterbekleidung"
+        />
       </div>
 
+      <div class="cuadro">
+        <div class="bandeja">
+          <h2>Kinderbekleidung</h2>
+          <a href="#" class="btnFlechaVacio"
+            ><img src="assets/der-doble.svg" alt="volken arrow button"
+          /></a>
+        </div>
+        <img
+          src="assets/sport-kinder.png"
+          class="cover"
+          alt="Volken sport Kinderbekleidung"
+        />
+      </div>
 
-   
-      
+      <div class="cuadro">
+        <div class="bandeja">
+          <h2>Unterwäsche</h2>
+          <a href="#" class="btnFlechaVacio"
+            ><img src="assets/der-doble.svg" alt="volken arrow button"
+          /></a>
+        </div>
+        <img
+          src="assets/sport-underwasche.png"
+          class="cover"
+          alt="Volken sport Unterwäsche"
+        />
+      </div>
+
+      <div class="cuadro">
+        <div class="bandeja">
+          <h2>Sommer Sport</h2>
+          <a href="#" class="btnFlechaVacio"
+            ><img src="assets/der-doble.svg" alt="volken arrow button"
+          /></a>
+        </div>
+        <img
+          src="assets/sport-sommer.png"
+          class="cover"
+          alt="Volken sport Sommer Sport"
+        />
+      </div>
+    </div>
+
+    <section class="conte section-header">
+      <h2>Voken news</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac
+        eget neque ac in.
+      </p>
+    </section>
+
+    <section>
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat hac
+            eget neque ac in <img src="assets/hero-volken-sport-mode-a.png" alt="borrar"> </div>
+          <div class="swiper-slide">Slide 2 <img src="assets/sport-kinder.png" alt="borrar"></div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">Slide 5</div>
+          <div class="swiper-slide">Slide 6</div>
+          <div class="swiper-slide">Slide 7</div>
+          <div class="swiper-slide">Slide 8</div>
+          <div class="swiper-slide">Slide 9</div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
     </section>
   </body>
   <script type="module" src="js/app.js"></script>
