--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       <div class="card-main">
         <div class="conte-img">
           <img src="assets/producto-1.png" alt="producto a" />
+          <img src="assets/producto-2.png" alt="producto inter" />
           <div class="logo">
             <img
               src="assets/marcas/peakperformance.png"
