--- a/index.html
+++ b/index.html
@@ -109,11 +109,16 @@
       <h2>Vorgestellte Kleidung</h2>
       <p>Auswahl an vorgestellter Kleidung oder Accessoires aus unserem Shop</p>
     </section>
+
+
     <section class="conte" id="productos">
+  
       <div class="card-main">
         <div class="conte-img">
-          <img src="assets/producto-1.png" alt="producto a" />
-          <img src="assets/producto-2.png" alt="producto inter" />
+          <div class="slider">
+            <img src="assets/producto-1.png" alt="producto a" />
+            <img src="assets/producto-2.png" alt="producto inter" />
+          </div>
           <div class="logo">
             <img
               src="assets/marcas/peakperformance.png"
