--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
       <div class="card-main">
         <div class="conte-img">
           <div class="slider">
-            <img src="assets/producto-1.png" alt="producto a" />
             <img src="assets/producto-2.png" alt="producto inter" />
+            <img src="assets/producto-1.png" alt="producto a" />
+            <img src="assets/producto-3.png" alt="producto inter" />
           </div>
           <div class="logo">
             <img
