--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
 
       <div class="card-main">
         <div class="conte-img">
-          <img src="assets/producto-2.png" alt="producto a" />
+          <div class="slider">
+            <img src="assets/producto-1.png" alt="producto a" />
+            <img src="assets/producto-3.png" alt="producto inter" />
+          </div>
           <div class="logo">
             <img src="assets/marcas/buff.png" alt="peak peak performance" />
           </div>
