avance, ya jala el slider de las cards

--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
 
       <div class="card-main">
         <div class="conte-img">
-          <img src="assets/producto-3.png" alt="producto a" />
+          <div class="slider">
+            <img src="assets/producto-3.png" alt="producto inter" />
+          </div>
           <div class="logo">
             <img
               src="assets/marcas/benvenuto.png"
