acabando el home

--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
         </div>
         <div class="der">
           <img
-            src="assets/hero-volken-sport-mode-a.png"
+            src="assets/hero-volken-sport-mode-a.webp"
             alt="volken sport mode summer"
           />
           <img
-            src="assets/hero-volken-sport-mode-b.png"
+            src="assets/hero-volken-sport-mode-b.webp"
             alt="volken sport mode in Fiesch"
           />
           <img
-            src="assets/hero-volken-sport-mode-c.png"
+            src="assets/hero-volken-sport-mode-c.webp"
             alt="volken sport mode Winterbekleidung"
           />
         </div>
       </div>
     </section>
-    <section class="contenedordoble conte">
+    <section id="storehome" class="contenedordoble conte">
       <div class="izq">
-        <img src="assets/volken-store-fiesch.png" alt="volken store fiesch" />
+        <img src="assets/volken-store-fiesch.webp" alt="volken store fiesch" />
       </div>
       <div class="der">
         <div class="bandeja">
@@ -205,7 +205,7 @@
           /></a>
         </div>
         <img
-          src="assets/sport-winter.png"
+          src="assets/sport-winter.webp"
           class="cover"
           alt="Volken sport Winterbekleidung"
         />
@@ -219,7 +219,7 @@
           /></a>
         </div>
         <img
-          src="assets/sport-kinder.png"
+          src="assets/sport-kinder.webp"
           class="cover"
           alt="Volken sport Kinderbekleidung"
         />
@@ -233,7 +233,7 @@
           /></a>
         </div>
         <img
-          src="assets/sport-Langlaufbekleidung.png"
+          src="assets/sport-Langlaufbekleidung.webp"
           class="cover"
           alt="Volken sport Langlaufbekleidung"
         />
@@ -247,7 +247,7 @@
           /></a>
         </div>
         <img
-          src="assets/sport-underwasche.png"
+          src="assets/sport-underwasche.webp"
           class="cover"
           alt="Volken sport Unterwäsche"
         />
@@ -261,7 +261,7 @@
           /></a>
         </div>
         <img
-          src="assets/sport-sommer.png"
+          src="assets/sport-sommer.webp"
           class="cover"
           alt="Volken sport Sommer Sport"
         />
