--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="#">Herren Freizeitmode</a></li>
           <li><a href="#">Schuhe</a></li>
           <li><a href="#" class="sport">Sport</a></li>
-          <li><a href="#">Team</a></li>
+          <li><a href="team.html">Team</a></li>
           <li>
             <a href="#"
               ><img src="assets/marker.svg" alt="Volken Sport lage"
