ajustes desde lap

--- a/category.html
+++ b/category.html
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="der">
-          <img src="assets/Damen-Freizeitmode.png" alt="Damen-Freizeitmode" />
+          <img src="assets/Damen-Freizeitmode.webp" alt="Damen-Freizeitmode" />
         </div>
       </div>
     </section>
